welcome.lessons.welcome.methods.slug.SlugHunting.scala.error
SlugHunting:9: error: not found: value isFacingtrail
    	if (!isFacingtrail()){
             ^SlugHunting:10: error: too many arguments for method droite: ()Unit
    		droite(2)
                      ^